# type-checking-python

./: app.py  pyproject.toml  test_app.py
